- Modified: standardized using single quotes.
- Modified: refactored removeAttr("checked") to attr("checked", "").

Version 0.4 - 02/15/2010
==============================================
- Added: the down arrow & space toggles open/close, and up arrow closes when focused on the input.
- Added: support for disabled="disabled" options.
- Added: the checkbox inputs now have the "title" attribute.
- Fixed: traversing the menu now skips over disabled options & optgroup headers.
- Fixed: removed the call to focus() when traversing the menu if there isn't a next/prev li.
- Fixed: setting the showHeader option to false no longer breaks the scrollbar or keyboard traversal scrollTop setting.
- Fixed: added relative positioning & z-index to .ui-multiselect-options (thanks David).
- Fixed: the main input's value is no longer cleared when a form's reset button is clicked.
- Fixed: the "title" attribute of the main input updates correctly when the last checkbox is unchecked.
- Modified: added a custom "toggleChecked" event to $options.
- Modified: the minWidth parameter is now 200 by default (from "auto").
- Modified: exposed default options by moving them to $.fn.multiSelect.defaults.

Version 0.4.1 - 02/15/2010
==============================================
- Fixed: graceful handling of form resets with pre-selected options, cross browser.

Version 0.5pre (under development)
==============================================
- Modifed: selectedText can now take a function with 3 args: number of inputs checked, number of inputs total, an array of the checked inputs.
- Modified: slight refactoring (moved updateSelected et al.).
- Modified: noneSelected renamed to noneSelectedText.
- Fixed: No need to pass the "px" unit to width().
- Fixed: The icons in the "check all" and "uncheck all" header links were not toggling correctly.
- Fixed: removed some unused vars.
- Fixed: better positioning of the header links.
- Removed: selectedList option.  Use selectedText instead.
