@@ -99,9 +99,10 @@ $(function(){
 		minWidth: 225
 	});
 
-	// open by default
-	$("#example10").multiSelect({ 
-		state: 'open'
+	// disabled
+	var $example11 = $("#example11");
+	$example11.siblings("button").click(function(){
+		$example11.toggleClass("ui-state-disabled");
 	});
 	
 	$("#examples").submit(function(e){
@@ -109,6 +110,9 @@ $(function(){
 		alert( data.length ? data : 'Nothing to serialize; check a box or two' );
 		e.preventDefault();
 	});
+	
+	
+
 	
 });
 </script>
@@ -251,19 +255,8 @@ $(function(){
 		<option value="option7">Option 7</option>
 		</select>
 	</p>
-
-	<h2>Example 8: Open by default</h2>
-	<p>
-		<select name="example10" id="example10" multiple="multiple" size="5">
-		<option value="option1">Option 1</option>
-		<option value="option2">Option 2</option>
-		<option value="option3">Option 3</option>
-		<option value="option4">Option 4</option>
-		<option value="option5">Option 5</option>
-		</select>
-	</p>
 	
-	<h2>Example 9: Multiple instances in-line</h2>
+	<h2>Example 8: Multiple instances in-line</h2>
 	<p>
 		<select name="example8" class="multiselect" multiple="multiple" size="5">
 		<option value="option1">Option 1</option>
@@ -281,7 +274,7 @@ $(function(){
 		<option value="option5">Option 5</option>
 		</select>
 
-		<select name="example9" class="multiselect" multiple="multiple" size="5">
+		<select name="example10" class="multiselect" multiple="multiple" size="5">
 		<option value="option1">Option 1</option>
 		<option value="option2">Option 2</option>
 		<option value="option3">Option 3</option>
@@ -291,9 +284,19 @@ $(function(){
 	</p>
 	
 	
-
+	<h2>Example 9: Entire widget disabled by default</h2>
+	<p>
+		<select id="example11" name="example11" class="multiselect" disabled="disabled" multiple="multiple" size="5">
+		<option value="option1">Option 1</option>
+		<option value="option2">Option 2</option>
+		<option value="option3">Option 3</option>
+		<option value="option4">Option 4</option>
+		<option value="option5">Option 5</option>
+		</select>
+		<br /><button type="button" name="toggle">Toggle Disabled</button>
+	</p>
 	
-	
+	<p>&nbsp;</p>
 	<select><option value="">Select to test IE6 bgiframe</opion></select><br /><br />
 	
 	
